--- a/src/assets/css/general.scss
+++ b/src/assets/css/general.scss
@@ -5,5 +5,5 @@ body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-family: Roboto, Helvetica, Arial, sans-serif;
-    color: red;
+    color: #21243D;
 }
