added about me and tools section

--- a/src/assets/css/general.scss
+++ b/src/assets/css/general.scss
@@ -9,5 +9,5 @@ body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-family: Roboto, Helvetica, Arial, sans-serif;
-    color: #21243D;
+    color: $black;
 }
